--- a/README
+++ b/README
@@ -4,9 +4,13 @@ docker push ttyole/stega-gan:latest
 sudo nvidia-docker pull ttyole/stega-gan:latest
 sudo nvidia-docker run --runtime=nvidia -it -v /media/data/cover/cover:/tf/app/cover \
                     -v /media/data/stego/wow-0.4-bpp/0.4bpp:/tf/app/stego \
-                    -p 8888:80/tcp ttyole/stega-gan:latest
+                    -p 80:80/tcp ttyole/stega-gan:latest
 
-docker run --rm -it -p 8888:80/tcp ttyole/stega-gan:latest
+python yedroudj.py &
+tensorboard --port 80 --logdir /tmp/yedroudj/v1 &
+tail -f .yedroudj1.log
+
+docker run --rm -it -p 80:80/tcp ttyole/stega-gan:latest
 
 # Monitor ressource usage
  nvidia-smi --loop=1
