--- a/README
+++ b/README
@@ -6,9 +6,10 @@ sudo nvidia-docker run --runtime=nvidia -it -v /media/data/cover/cover:/tf/app/c
                     -v /media/data/stego/wow-0.4-bpp/0.4bpp:/tf/app/stego \
                     -p 80:80/tcp ttyole/stega-gan:latest
 
-python yedroudj.py &
-tensorboard --port 80 --logdir /tmp/yedroudj/v1 &
-tail -f .yedroudj1.log
+python generator_training.py &
+tensorboard --port 80 --logdir ./.tensorboards-logs/gan/v1 &
+
+
 
 docker run --rm -it -p 80:80/tcp ttyole/stega-gan:latest
 
