--- a/README
+++ b/README
@@ -1,3 +1,37 @@
+#######################################################################
+# Setup VM - Ubuntu 16.04 only
+
+sudo su
+
+# CUDA + nvidia driver
+curl -O http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/cuda-repo-ubuntu1604_10.0.130-1_amd64.deb
+dpkg -i ./cuda-repo-ubuntu1604_10.0.130-1_amd64.deb
+apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/7fa2af80.pub
+apt-get update
+apt-get install cuda-10-0 -y
+
+# Docker repo + install docker-ce
+apt-get update
+apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common -y
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+apt-get update
+apt-get install docker-ce docker-ce-cli containerd.io -y
+
+# nvidia-docker repo + install
+curl -s -L https://nvidia.github.io/nvidia-docker/gpgkey | apt-key add -
+distribution=$(. /etc/os-release;echo $ID$VERSION_ID)
+curl -s -L https://nvidia.github.io/nvidia-docker/$distribution/nvidia-docker.list | \
+tee /etc/apt/sources.list.d/nvidia-docker.list
+apt-get update
+apt-get install nvidia-docker2 -y
+systemctl daemon-reload
+systemctl restart docker
+
+exit
+
+#######################################################################
+
 docker build -t ttyole/stega-gan .
 docker push ttyole/stega-gan:latest
 
@@ -13,10 +47,12 @@ tensorboard --port 80 --logdir ./.tensorboards-logs/gan/v3 &
 
 docker run --rm -it -p 80:80/tcp ttyole/stega-gan:latest
 
+#######################################################################
 # Monitor ressource usage
- watch nvidia-smi
- htop
+watch nvidia-smi
+htop
 
+#######################################################################
 # Embeder/Extractor
 python embedder.py saves/gan test/cover.pgm "My awesome message with unicode chr éà@ù" test/stego.pgm test/key
 python extractor.py test/stego.pgm test/key test/extractedMSG
