--- a/README
+++ b/README
@@ -4,6 +4,7 @@
 sudo su
 
 # CUDA + nvidia driver
+apt-get install dirmngrdc
 curl -O http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/cuda-repo-ubuntu1604_10.0.130-1_amd64.deb
 dpkg -i ./cuda-repo-ubuntu1604_10.0.130-1_amd64.deb
 apt-key adv --fetch-keys http://developer.download.nvidia.com/compute/cuda/repos/ubuntu1604/x86_64/7fa2af80.pub
