--- a/README
+++ b/README
@@ -44,12 +44,14 @@ sudo nvidia-docker run --runtime=nvidia -it -v /media/data/cover/cover:/tf/app/c
 python generator_training.py &
 tensorboard --port 80 --logdir ./.tensorboards-logs/gan/v3 &
 
-# gen stego with generator trained
+#######################################################################
+# gen stego img with generator trained
 sudo nvidia-docker pull ttyole/stega-gan:latest
-sudo nvidia-docker run --runtime=nvidia -it -v /media/data/cover:/tf/app/cover \
+sudo nvidia-docker run --runtime=nvidia -it \
+                    -v /media/data/cover:/tf/app/cover \
                     -v /media/data/stego/asdl-gan:/tf/app/stego \
-                    -p 80:80/tcp ttyole/stega-gan:latest
-docker run --rm -it -p 80:80/tcp ttyole/stega-gan:latest
+                    -p 80:80/tcp \
+                    ttyole/stega-gan:latest
 
 #######################################################################
 # Monitor ressource usage
